<resources>
    <string name="app_name">APOD</string>
    <string name="swipe_to_view_description">Swipe To View Description</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="media_url">https://www.youtube.com/embed/DhmdyQdu96M?rel=0</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="header_image">Header Image</string>
    <string name="button_for_calendar">Button for Calendar</string>
    <string name="button_for_playing_media">button for playing media</string>
</resources>
